--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,23 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath('com.android.tools.build:gradle:3.6.3')
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -35,4 +36,10 @@ dependencies {
     implementation 'com.stringee.sdk.android:stringee-android-sdk:1.3.16'
     implementation 'org.webrtc:google-webrtc:1.0.30039'
     implementation 'com.android.volley:volley:1.1.0'
+}
+
+repositories {
+    google()
+    maven { url "$rootDir/../node_modules/react-native/android" }
+    jcenter()
 }
